@@ -615,11 +615,11 @@
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/disktree/sort_col</key>
-      <applyto>/apps/procman/disktree/sort_col</applyto>
+      <key>/schemas/apps/procman/disktreenew/sort_col</key>
+      <applyto>/apps/procman/disktreenew/sort_col</applyto>
       <owner>procman</owner>
       <type>int</type>
-      <default>0</default>
+      <default>1</default>
       <locale name="C">
         <short>Process view sort column</short>
         <long></long>
@@ -627,8 +627,8 @@
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/disktree/sort_order</key>
-      <applyto>/apps/procman/disktree/sort_order</applyto>
+      <key>/schemas/apps/procman/disktreenew/sort_order</key>
+      <applyto>/apps/procman/disktreenew/sort_order</applyto>
       <owner>procman</owner>
       <type>int</type>
       <default>0</default>
@@ -639,97 +639,13 @@
       </schema>
       
       <schema>
-      <key>/schemas/apps/procman/disktree/col_0_width</key>
-      <applyto>/apps/procman/disktree/col_0_width</applyto>
+      <key>/schemas/apps/procman/disktreenew/columns_order</key>
+      <applyto>/apps/procman/disktreenew/columns_order</applyto>
       <owner>procman</owner>
-      <type>int</type>
-      <default>59</default>
+      <type>list</type>
+      <list_type>int</list_type>
       <locale name="C">
-        <short>Column zero saved width</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/disktree/col_0_visible</key>
-      <applyto>/apps/procman/disktree/col_0_visible</applyto>
-      <owner>procman</owner>
-      <type>bool</type>
-      <default>TRUE</default>
-      <locale name="C">
-        <short>Show column zero on startup</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/disktree/col_1_width</key>
-      <applyto>/apps/procman/disktree/col_1_width</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>59</default>
-      <locale name="C">
-        <short>Column zero saved width</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/disktree/col_1_visible</key>
-      <applyto>/apps/procman/disktree/col_1_visible</applyto>
-      <owner>procman</owner>
-      <type>bool</type>
-      <default>TRUE</default>
-      <locale name="C">
-        <short>Show column zero on startup</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/disktree/col_2_width</key>
-      <applyto>/apps/procman/disktree/col_2_width</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>78</default>
-      <locale name="C">
-        <short>Column zero saved width</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/disktree/col_2_visible</key>
-      <applyto>/apps/procman/disktree/col_2_visible</applyto>
-      <owner>procman</owner>
-      <type>bool</type>
-      <default>TRUE</default>
-      <locale name="C">
-        <short>Show column zero on startup</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/disktree/col_3_width</key>
-      <applyto>/apps/procman/disktree/col_3_width</applyto>
-      <owner>procman</owner>
-      <type>int</type>
-      <default>188</default>
-      <locale name="C">
-        <short>Column zero saved width</short>
-        <long></long>
-      </locale>
-      </schema>
-      
-      <schema>
-      <key>/schemas/apps/procman/disktree/col_3_visible</key>
-      <applyto>/apps/procman/disktree/col_3_visible</applyto>
-      <owner>procman</owner>
-      <type>bool</type>
-      <default>TRUE</default>
-      <locale name="C">
-        <short>Show column zero on startup</short>
+        <short>Disk view columns order</short>
         <long></long>
       </locale>
       </schema>
