@@ -1,3 +1,11 @@
+2005-12-28  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* src/disks.c: (cb_disk_columns_changed), (create_disk_view):
+	* src/gnome-system-monitor.schemas.in:
+	* src/procman.c: (procman_get_tree_state),
+	(procman_save_tree_state):  Allow user to sort the device 
+	list.  Fixes bug #311920
+
 2005-12-27  Benoît Dejean  <benoit@placenet.org>
 
 	* src/procdialogs.c: (smooth_refresh_toggled),
